# LongLineLasso

./: .gitignore  Cargo.toml  README.md  TODO
generate_large_files/: Cargo.toml
generate_large_files/src/: main.rs
performance_testing/: analysis.md  flame_graph.sh  flame_graph_append_v5.sh  generate_files.ps1  generate_files.sh  performance_results_sed_v3.txt  performance_results_v1.txt  performance_results_v2.txt  performance_results_v3.txt  performance_results_v4.txt  performance_results_v5.txt  performance_results_v6.txt  performance_test.ps1  performance_test.sh  performance_test_sed.sh  run_large_for_wpr.bat  run_large_for_wpr.ps1
src/: lib.rs  main.rs  matcher.rs  string_stream_editor.rs
