[package]
name = "LongLineLasso"
version = "0.0.1"
authors = ["Joseph Mate <mate.joseph@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
utf8-chars = "1.0.0"

# for flame graph
[profile.release]
debug = true

[[bin]]
bench = false
path = "src/main.rs"
name = "lll"
